side chart adjustments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-      <!-- Left side: dice and roll controls -->
+      <!-- Left: dice and controls -->
       <section class="dice-area">
         <div class="mode-toggle">
           <span class="mode-label">Mode:</span>
@@ -56,7 +56,7 @@
         </div>
       </section>
 
-      <!-- Right side: card and always visible shot chart -->
+      <!-- Right: main card + charts -->
       <section class="card-area">
         <h2>Result Card</h2>
 
@@ -67,6 +67,10 @@
 
           <div class="shot-chart-container">
             <img src="images/shot_chart.png" alt="Shot result chart">
+          </div>
+
+          <div class="goal-chart-container">
+            <img src="images/goal_effect.png" alt="Goal effect chart">
           </div>
         </div>
 
@@ -80,3 +84,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
