Starting powerplay cards

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <button id="rollButton" class="roll-button">Roll</button>
 
         <div id="resultText" class="result-text">
-          Result will show here.
+          Mode: Even Strength | White -, Black -, Red -, Green -.
         </div>
       </section>
 
-      <!-- Right: main card + charts -->
+      <!-- Right: main card + side charts -->
       <section class="card-area">
         <h2>Result Card</h2>
 
@@ -66,11 +66,11 @@
           </div>
 
           <div class="shot-chart-container">
-            <img src="images/shot_chart.png" alt="Shot result chart">
+            <img src="images/shot_chart.png" alt="Shot chart">
           </div>
 
           <div class="goal-chart-container">
-            <img src="images/goal_effect.png" alt="Goal effect chart">
+            <img src="images/goal_effect.png" alt="Goal / results chart">
           </div>
         </div>
 
@@ -84,4 +84,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
