Added no PP goal chart

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         <div id="resultText" class="result-text">
           Mode: Even Strength | White -, Black -, Red -, Green -.
         </div>
+
+        <!-- NEW: NO GOAL PP helper image under roll text -->
+        <div class="no-goal-pp">
+          <img src="images/no_goal_pp.png" alt="No goal PP reference">
+        </div>
       </section>
 
       <!-- Right: main card + side charts -->
