even more charts

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             <button id="reboundButton" class="chart-toggle-button">Rebound</button>
             <button id="deflectionButton" class="chart-toggle-button">Deflection</button>
             <button id="chaosButton" class="chart-toggle-button">Chaos</button>
+            <button id="goalEffectButton" class="chart-toggle-button">Goal Effect</button>
+            <button id="shotCButton" class="chart-toggle-button">Shot C</button>
           </div>
         </div>
 
@@ -123,6 +125,22 @@
             <img src="images/chaos_chart.png" alt="Chaos chart">
           </div>
         </div>
+
+        <!-- Goal Effect chart overlay -->
+        <div id="goalEffectOverlay" class="goalie-overlay" style="display: none;">
+          <div class="goalie-overlay-content">
+            <button id="closeGoalEffectOverlay" class="chart-close-button">X</button>
+            <img src="images/goal_effect_chart.png" alt="Goal Effect chart">
+          </div>
+        </div>
+
+        <!-- Shot C chart overlay -->
+        <div id="shotCOverlay" class="goalie-overlay" style="display: none;">
+          <div class="goalie-overlay-content">
+            <button id="closeShotCOverlay" class="chart-close-button">X</button>
+            <img src="images/shot_c_chart.png" alt="Shot C chart">
+          </div>
+        </div>
       </section>
     </main>
   </div>
@@ -130,6 +148,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
