--- a/index.html
+++ b/index.html
@@ -59,6 +59,29 @@
         <div class="no-goal-pp">
           <img src="images/no_goal_pp.png" alt="No goal PP reference">
         </div>
+
+        <!-- GAME CLOCK (centered and bigger via inline styles) -->
+        <div class="game-clock"
+             style="margin-top:20px; display:flex; flex-direction:column; align-items:center; text-align:center;">
+          <h3 class="game-clock-title" style="font-size:1.25rem; margin-bottom:6px;">Game Clock</h3>
+          <div id="gameClock"
+               class="clock-display"
+               style="font-size:2.8rem; font-weight:700; letter-spacing:1px; margin-bottom:10px;">
+            20:00
+          </div>
+          <div class="clock-buttons" style="display:flex; gap:10px; justify-content:center; width:100%;">
+            <button id="clockMinus"
+                    class="clock-button"
+                    style="min-width:100px; padding:6px 10px; font-size:1rem;">
+              - 0:20
+            </button>
+            <button id="clockPlus"
+                    class="clock-button"
+                    style="min-width:100px; padding:6px 10px; font-size:1rem;">
+              + 0:20
+            </button>
+          </div>
+        </div>
       </section>
 
       <!-- Right: main card + side charts -->
@@ -148,6 +171,8 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
 
