added more charts

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             <button id="chaosButton" class="chart-toggle-button">Chaos</button>
             <button id="goalEffectButton" class="chart-toggle-button">Goal Effect</button>
             <button id="shotCButton" class="chart-toggle-button">Shot C</button>
+            <button id="penaltyButton" class="chart-toggle-button">Penalty</button>
+            <button id="brutalButton" class="chart-toggle-button">Brutal Play</button>
           </div>
         </div>
 
@@ -164,6 +166,22 @@
             <img src="images/shot_c_chart.png" alt="Shot C chart">
           </div>
         </div>
+
+        <!-- Penalty chart overlay -->
+        <div id="penaltyOverlay" class="goalie-overlay" style="display: none;">
+          <div class="goalie-overlay-content">
+            <button id="closePenaltyOverlay" class="chart-close-button">X</button>
+            <img src="images/penalty_chart.png" alt="Penalty chart">
+          </div>
+        </div>
+
+        <!-- Brutal Play chart overlay -->
+        <div id="brutalOverlay" class="goalie-overlay" style="display: none;">
+          <div class="goalie-overlay-content">
+            <button id="closeBrutalOverlay" class="chart-close-button">X</button>
+            <img src="images/brutal_play_chart.png" alt="Brutal Play chart">
+          </div>
+        </div>
       </section>
     </main>
   </div>
@@ -171,6 +189,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
