--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <button id="homeMinus"
                     style="padding:4px 8px; min-width:32px; font-size:0.95rem;">-</button>
             <div id="homeScore"
-                 style="min-width:30px; text-align:center; font-size:1.5rem; font-weight:700;">0</div>
+                 style="min-width:30px; text-align:center; font-size:1.7rem; font-weight:700;">0</div>
             <button id="homePlus"
                     style="padding:4px 8px; min-width:32px; font-size:0.95rem;">+</button>
           </div>
@@ -105,8 +105,20 @@
             <button id="visitorMinus"
                     style="padding:4px 8px; min-width:32px; font-size:0.95rem;">-</button>
             <div id="visitorScore"
-                 style="min-width:30px; text-align:center; font-size:1.5rem; font-weight:700;">0</div>
+                 style="min-width:30px; text-align:center; font-size:1.7rem; font-weight:700;">0</div>
             <button id="visitorPlus"
+                    style="padding:4px 8px; min-width:32px; font-size:0.95rem;">+</button>
+          </div>
+
+          <!-- PERIOD CONTROL -->
+          <div class="score-row"
+               style="display:flex; align-items:center; justify-content:space-between; width:100%; max-width:260px; gap:8px; margin-top:4px;">
+            <div style="flex:1; text-align:left; font-weight:600;">Period</div>
+            <button id="periodMinus"
+                    style="padding:4px 8px; min-width:32px; font-size:0.95rem;">-</button>
+            <div id="periodDisplay"
+                 style="min-width:40px; text-align:center; font-size:1.4rem; font-weight:700;">1</div>
+            <button id="periodPlus"
                     style="padding:4px 8px; min-width:32px; font-size:0.95rem;">+</button>
           </div>
         </div>
@@ -196,7 +208,7 @@
         </div>
 
         <!-- Penalty chart overlay -->
-        <div id="penaltyOverlay" class="goalie-overlay" style="display: none;">
+        <div id="penaltyOverlay" class="goalie-overlay" style="display: none%;">
           <div class="goalie-overlay-content">
             <button id="closePenaltyOverlay" class="chart-close-button">X</button>
             <img src="images/penalty_chart.png" alt="Penalty chart">
@@ -217,6 +229,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
