--- a/index.html
+++ b/index.html
@@ -64,11 +64,33 @@
         <div class="game-clock"
              style="margin-top:20px; display:flex; flex-direction:column; align-items:center; text-align:center;">
           <h3 class="game-clock-title" style="font-size:1.25rem; margin-bottom:6px;">Game Clock</h3>
-          <div id="gameClock"
-               class="clock-display"
-               style="font-size:2.8rem; font-weight:700; letter-spacing:1px; margin-bottom:10px;">
-            20:00
+
+          <!-- main clock + elapsed + reset -->
+          <div class="clock-top-row"
+               style="display:flex; align-items:flex-end; justify-content:center; gap:10px; margin-bottom:8px;">
+            <div style="display:flex; flex-direction:column; align-items:center;">
+              <div id="gameClock"
+                   class="clock-display"
+                   style="font-size:2.8rem; font-weight:700; letter-spacing:1px;">
+                20:00
+              </div>
+              <div class="elapsed-container"
+                   style="margin-top:2px; font-size:0.8rem;">
+                <span>Elapsed:</span>
+                <span id="elapsedClock"
+                      style="font-size:0.9rem; font-weight:600; margin-left:4px;">
+                  0:00
+                </span>
+              </div>
+            </div>
+
+            <button id="clockReset"
+                    class="clock-button"
+                    style="padding:4px 8px; font-size:0.9rem; height:32px; align-self:center;">
+              Reset
+            </button>
           </div>
+
           <div class="clock-buttons" style="display:flex; gap:10px; justify-content:center; width:100%;">
             <button id="clockMinus"
                     class="clock-button"
@@ -265,6 +287,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
